tests/negative/test-fail-arith.std
Fatal error: exception Failure("type_err:Arithmetic expression type mismatch and only supports int and float")